# belajar-rust

./: LICENSE  README.md
common_concepts/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
heycargo/: Cargo.toml
heycargo/src/: lib.rs  main.rs
minigrep/src/: lib.rs  lib_mod.rs  main.rs  main_mod.rs
projectspace/: Cargo.toml
projectspace/backend/: Cargo.toml
projectspace/utils/: Cargo.toml
rust_advanced_features/: Cargo.toml
rust_advanced_features/rust_declarative_macro/: Cargo.toml
rust_advanced_features/rust_procedural_macro/main_program/: Cargo.toml
rust_advanced_features/rust_procedural_macro/main_program/src/: main.rs
rust_advanced_features/src/: lib_advanced_traits.rs  lib_advanced_types.rs  main.rs  main_advanced_traits.rs  main_advanced_types.rs  main_unsafe_rust.rs
rust_closures/: Cargo.toml
rust_closures/src/: main.rs
rust_common_collections/: Cargo.toml
rust_common_collections/src/: main _vector.rs  main.rs  main_string.rs
rust_concurrency/: Cargo.toml
rust_concurrency/src/: main.rs  main_message_passing.rs  main_shared_state.rs
rust_enum_pattern_matching/: Cargo.toml
rust_enum_pattern_matching/src/: main.rs  main_enum.rs
rust_error_handling/: Cargo.toml
rust_error_handling/src/: main.rs
rust_generic_type_traits_lifetimes/: Cargo.toml
rust_oop/: Cargo.toml
rust_ownership/: Cargo.toml
rust_pattern_matching/: Cargo.toml
rust_pattern_syntax/: Cargo.toml
rust_smart_pointer/: Cargo.toml
rust_struct/: Cargo.toml
rust_webserver/: 404.html  Cargo.toml  index.html
rusttest/: Cargo.toml
(+45 files in other folders)
